--- a/custom_components/ai_automation_suggester/translations/zh.json
+++ b/custom_components/ai_automation_suggester/translations/zh.json
@@ -3,94 +3,46 @@
   "config": {
     "step": {
       "user": {
-        "title": "Select AI Provider",
+        "title": "选择 AI 提供商",
         "data": {
-          "provider": "AI Provider"
+          "provider": "AI 提供商"
         }
       },
-      "openai": {
-        "title": "Configure OpenAI"
-      },
-      "anthropic": {
-        "title": "Configure Anthropic"
-      },
-      "google": {
-        "title": "Configure Google"
-      },
-      "groq": {
-        "title": "Configure Groq"
-      },
-      "localai": {
-        "title": "Configure LocalAI",
+      "provider_config": {
+       "title": "配置 AI 提供商 (当前: {provider})",
+        "description": "请输入您选择的提供商的详细信息。",
         "data": {
-          "localai_ip": "LocalAI IP Address",
-          "localai_port": "LocalAI Port",
-          "localai_https": "Use HTTPS for LocalAI"
-        }
-      },
-      "ollama": {
-        "title": "Configure Ollama",
-        "data": {
-          "ollama_ip": "Ollama IP Address",
-          "ollama_port": "Ollama Port",
-          "ollama_https": "Use HTTPS for Ollama",
-          "ollama_disable_think": "Disable Think Mode (Ollama)"
-        }
-      },
-      "custom_openai": {
-        "title": "Configure Custom OpenAI",
-        "data": {
-          "custom_openai_endpoint": "Custom OpenAI Endpoint",
-          "custom_openai_api_key": "Custom OpenAI API Key (Optional)"
-        }
-      },
-      "mistral": {
-        "title": "Configure Mistral AI"
-      },
-      "perplexity": {
-        "title": "Configure Perplexity AI"
-      },
-      "openrouter": {
-        "title": "Configure OpenRouter",
-        "data": {
-          "openrouter_reasoning_max_tokens": "OpenRouter Reasoning Max Tokens"
-        }
-      },
-      "openai_azure": {
-        "title": "Configure OpenAI Azure",
-        "data": {
-          "openai_azure_deployment_id": "Azure Deployment ID",
-          "openai_azure_endpoint": "Azure Endpoint",
-          "openai_azure_api_version": "Azure API Version"
-        }
-      },
-      "generic_openai": {
-        "title": "Configure Generic OpenAI",
-        "data": {
-          "generic_openai_api_endpoint": "Generic OpenAI API Full URL (should end with 'completions')",
-          "generic_openai_api_key": "Generic OpenAI API Key (Optional)",
-          "generic_openai_validation_endpoint": "Validation URL (should end with 'models')",
-          "generic_openai_enable_validation": "Enable Validation"
-        }
-      },
-      "common": {
-        "title": "Configure Common Settings",
-        "data": {
-          "api_key": "API Key",
-          "model": "Model",
-          "temperature": "Temperature",
-          "max_input_tokens": "Max Input Tokens",
-          "max_output_tokens": "Max Output Tokens"
+          "api_key": "API 密钥",
+          "model": "模型",
+          "temperature": "温度",
+          "max_input_tokens": "最大输入令牌",
+          "max_output_tokens": "最大输出令牌",
+          "generic_openai_api_endpoint": "通用 OpenAI API 完整 URL（应以 'completions' 结尾）",
+          "generic_openai_validation_endpoint": "验证 URL（应以 'models' 结尾）",
+          "generic_openai_enable_validation": "启用验证",
+          "openai_azure_deployment_id": "Azure 部署 ID",
+          "openai_azure_endpoint": "Azure 端点",
+          "openai_azure_api_version": "Azure API 版本",
+          "openrouter_reasoning_max_tokens": "OpenRouter 推理最大令牌",
+          "ollama_ip": "Ollama IP 地址",
+          "ollama_port": "Ollama 端口",
+          "ollama_https": "为 Ollama 使用 HTTPS",
+          "ollama_disable_think": "禁用思考模式 (Ollama)",
+          "custom_openai_endpoint": "自定义 OpenAI 端点",
+          "localai_ip": "LocalAI IP 地址",
+          "localai_port": "LocalAI 端口",
+          "localai_https": "为 LocalAI 使用 HTTPS"
         }
       }
     },
     "error": {
-      "api_error": "API validation failed: {error_message}",
-      "cannot_connect": "Failed to connect. Please check your settings and network.",
-      "unknown": "An unknown error occurred. Please check logs for details."
+      "api_error": "API 验证失败: {error_message}",
+      "cannot_connect": "连接失败。请检查您的设置和网络。",
+      "auth_error": "认证失败。请检查您的凭据。",
+      "unknown": "发生未知错误。请检查日志以获取详细信息。"
     },
     "abort": {
-      "already_configured": "This AI provider is already configured. You can edit it from the integrations page."
+      "already_configured": "此 AI 提供商已配置。您可以从集成页面编辑它。"
     }
   },
   "options": {
@@ -111,13 +63,11 @@
           "ollama_https": "为 Ollama 使用 HTTPS",
           "ollama_disable_think": "禁用思考模式 (Ollama)",
           "custom_openai_endpoint": "自定义 OpenAI 端点",
-          "custom_openai_api_key": "自定义 OpenAI API 密钥",
           "openrouter_reasoning_max_tokens": "OpenRouter 推理最大令牌",
           "openai_azure_deployment_id": "Azure 部署 ID",
           "openai_azure_endpoint": "Azure 端点",
           "openai_azure_api_version": "Azure API 版本",
           "generic_openai_api_endpoint": "通用 OpenAI API 完整 URL（应以 'completions' 结尾）",
-          "generic_openai_api_key": "通用 OpenAI API 密钥",
           "generic_openai_validation_endpoint": "验证 URL（通用 OpenAI，应以 'models' 结尾）",
           "generic_openai_enable_validation": "启用验证（通用 OpenAI）"
         },
@@ -125,37 +75,37 @@
       }
     },
     "error": {
-      "invalid_input": "One or more values are invalid."
+      "invalid_input": "一个或多个值无效。"
     }
   },
   "services": {
     "generate_suggestions": {
-      "name": "Generate Suggestions",
-      "description": "Manually trigger AI automation suggestions.",
+      "name": "生成建议",
+      "description": "手动触发 AI 自动化建议。",
       "fields": {
         "provider_config": {
-          "name": "Provider Configuration",
-          "description": "Which provider configuration to use (if you have multiple)"
+          "name": "提供商配置",
+          "description": "使用哪个提供商配置（如果您有多个）"
         },
         "custom_prompt": {
-          "name": "Custom Prompt",
-          "description": "Optional custom prompt to override the default system prompt or guide the suggestions towards specific themes"
+          "name": "自定义提示",
+          "description": "可选的自定义提示，用于覆盖默认系统提示或引导建议指向特定主题"
         },
         "all_entities": {
-          "name": "Consider All Entities",
-          "description": "If true, consider all entities instead of just new entities."
+          "name": "考虑所有实体",
+          "description": "如果为 true，则考虑所有实体而不仅仅是新实体。"
         },
         "domains": {
-          "name": "Domains",
-          "description": "List of domains to consider. If empty, consider all domains."
+          "name": "域",
+          "description": "要考虑的域列表。如果为空，则考虑所有域。"
         },
         "entity_limit": {
-          "name": "Entity Limit",
-          "description": "Maximum number of entities to consider (randomly selected)."
+          "name": "实体限制",
+          "description": "要考虑的最大实体数（随机选择）。"
         },
         "automation_read_yaml": {
-          "name": "Read 'automations.yaml' file",
-          "description": "Reads and appends the YAML code of the automations found in the 'automations.yaml' file. This action will use a lot of input tokens, use it with care and with models with a large context window (e.g. Gemini)."
+          "name": "读取 'automations.yaml' 文件",
+          "description": "读取并附加 'automations.yaml' 文件中找到的自动化 YAML 代码。此操作将使用大量输入令牌，请谨慎使用并配合具有大上下文窗口的模型（例如 Gemini）。"
         },
         "automation_limit": {
           "name": "自动化数量上限",
@@ -163,7 +113,7 @@
         },
         "include_entity_details": {
           "name": "包含实体详情",
-          "description": "在提示中包含详细的实体信息（属性和设备信息）。禁用可减少令牌使用，但为 AI 提供的上下文较少。"
+          "description": "在提示中包含详细的实体信息（属性和设备信息）。禁用此选项可减少令牌使用，但为 AI 提供的上下文较少。"
         }
       }
     }
